--- a/style.css
+++ b/style.css
@@ -44,10 +44,17 @@ body {
     font-size: 16px;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000, 0px 0px 5px #000;
     user-select: none;
+    transition: 200ms;
 }
 
 .has-item {
+    background-color: white;
+}
+
+.has-item:hover {
     cursor: pointer;
+    background-size: 128px;
+    box-shadow: inset 0 0 5px #0051ff, inset 0 0 25px #006eff;
 }
 
 .open-main {
@@ -109,8 +116,8 @@ body {
 
 .lootAll {
     position: absolute;
-    top: 18rem;
-    left: 2rem;
+    top: 10rem;
+    right: 2rem;
     width: 5rem;
     height: 5rem;
     border-radius: 15px;
@@ -150,5 +157,26 @@ body {
 }
 
 .clearAll:active {
+    transform: scale(97%);
+}
+
+.open-secondary {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 15px;
+    border: none;
+    transition: 150ms;
+    background-color: #62e96d;
+}
+.open-secondary:hover {
+    background-color: #85ee8e;
+    box-shadow: 0 0 15px rgba(37, 216, 96, 0.5);
+    transform: scale(103%);
+    cursor: pointer;
+}
+.open-secondary:active {
     transform: scale(97%);
 }
