--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .none {
-    display: none !important;
+    display: none;
 }
 
 .main-container {
@@ -57,7 +57,7 @@ body {
     box-shadow: inset 0 0 5px #0051ff, inset 0 0 25px #006eff;
 }
 
-.open-main {
+.open-main { /*button*/
     position: absolute;
     top: 2rem;
     left: 2rem;
@@ -69,18 +69,18 @@ body {
     background-color: #62e96d;
 }
 
-.open-main:hover {
+.open-main:hover { /*button*/
     background-color: #85ee8e;
     box-shadow: 0 0 15px rgba(37, 216, 96, 0.5);
     transform: scale(103%);
     cursor: pointer;
 }
 
-.open-main:active {
+.open-main:active { /*button*/
     transform: scale(97%);
 }
 
-.randomize {
+.randomize { /*button*/
     position: absolute;
     top: 10rem;
     left: 2rem;
@@ -92,14 +92,14 @@ body {
     background-color: #62b8e9;
 }
 
-.randomize:hover {
+.randomize:hover { /*button*/
     background-color: #62b8e9;
     box-shadow: 0 0 15px rgba(37, 135, 216, 0.5);
     transform: scale(103%);
     cursor: pointer;
 }
 
-.randomize:active {
+.randomize:active { /*button*/
     transform: scale(97%);
 }
 
@@ -114,7 +114,7 @@ body {
     top: 2rem;
 }
 
-.lootAll {
+.lootAll { /*button*/
     position: absolute;
     top: 10rem;
     right: 2rem;
@@ -126,18 +126,18 @@ body {
     background-color: rgb(220, 226, 26);
 }
 
-.lootAll:hover {
+.lootAll:hover { /*button*/
     background-color: rgb(220, 226, 26);
     box-shadow: 0 0 15px rgba(246, 255, 0, 0.5);
     transform: scale(103%);
     cursor: pointer;
 }
 
-.lootAll:active {
+.lootAll:active { /*button*/
     transform: scale(97%);
 }
 
-.clearAll {
+.clearAll { /*button*/
     position: absolute;
     top: 26rem;
     left: 2rem;
@@ -149,18 +149,18 @@ body {
     background-color: #d84949;
 }
 
-.clearAll:hover {
+.clearAll:hover { /*button*/
     background-color: #d84949;
     box-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
     transform: scale(103%);
     cursor: pointer;
 }
 
-.clearAll:active {
+.clearAll:active { /*button*/
     transform: scale(97%);
 }
 
-.open-secondary {
+.open-secondary { /*button*/
     position: absolute;
     top: 2rem;
     right: 2rem;
@@ -171,12 +171,98 @@ body {
     transition: 150ms;
     background-color: #62e96d;
 }
-.open-secondary:hover {
+.open-secondary:hover { /*button*/
     background-color: #85ee8e;
     box-shadow: 0 0 15px rgba(37, 216, 96, 0.5);
     transform: scale(103%);
     cursor: pointer;
 }
-.open-secondary:active {
+.open-secondary:active { /*button*/
     transform: scale(97%);
+}
+
+#ivarSign{
+    color: darkred;
+    align-self: center;
+    text-decoration: double;
+    text-align: center;
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+    font-weight: bold;
+    font-family: autorative;
+    font-size: larger;
+}
+
+button {
+    font-weight: bold;
+}
+
+#andreSign{
+    /*
+    "Comic Sans MS", "Comic Sans", cursive;
+    */
+    font-family: Arial, Helvetica, sans-serif;
+    align-self: center;
+    color: rgb(127, 255, 53);
+    text-align: center;
+    /* box-shadow: 0 0 20px greenyellow;*/
+    margin-top: 2px;
+    margin-bottom: 2px;
+    
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+    animation-delay: 150ms;
+    animation-duration: 1s;
+}
+
+#andreSign::first-letter{
+    color: greenyellow;
+}
+
+#binerSign {
+    animation-delay: 300ms;
+    color: yellow;
+    align-self: center;
+    text-decoration: double;
+    text-align: center;
+    text-shadow: 10px, 20px, rgb(255, 247, 5);
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: larger;
+}
+
+@keyframes bounce {
+    0% { transform: scale(100%); }
+    50% { transform: scale(110%); }
+    100% { transform: scale(100%); }
+}
+
+#torje-sign {
+    animation-delay: 450ms;
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+    font-weight: bold;
+    text-align: center;
+    color: #37afff;
+}
+
+#pålsign {
+    animation-delay: 600ms;
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+    animation-duration: 1s;
+    font-weight: bold;
+    text-align: center;
+    color: #c716be;
+}
+
+#studentSignaturer {
+    position: absolute;
+    top: 1rem;
+    left: 50%;
+    transform: translate(-50%);
 }
